--- a/ProyectoCinepolis/pom.xml
+++ b/ProyectoCinepolis/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.31</version>
         </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
     <name>ProyectoCinepolis</name>
 </project>
