funcionalidad 100 ticket generacion

--- a/ProyectoCinepolis/pom.xml
+++ b/ProyectoCinepolis/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>jcalendar</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>ch.codeblock.qrinvoice.itext5</groupId>
+            <artifactId>qrinvoice-itext5</artifactId>
+            <version>1.19</version>
+        </dependency>
     </dependencies>
     <name>ProyectoCinepolis</name>
 </project>
