--- a/ProyectoCinepolis/pom.xml
+++ b/ProyectoCinepolis/pom.xml
@@ -9,7 +9,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
-        <exec.mainClass>com.mycompany.proyectocinepolis.ProyectoCinepolis</exec.mainClass>
+        <exec.mainClass>MainCarlos.mainCarlos</exec.mainClass>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
